#2378 Refactored populateGroup not to be sideeffectful.
Also, extracted error messages as constans and improved documentation.